--- a/style/style.css
+++ b/style/style.css
@@ -20,6 +20,7 @@ body{
     justify-content: center;
     align-items: center;
     height: 100vh;
+    background-color: #ffccbc;
 }
 
 .action{
@@ -50,4 +51,64 @@ body{
     width: 100%;
     height: 100%;
     object-fit: cover;
+}
+
+.action .menu{
+    position: absolute;
+    top: 150px;
+    right: 0%;
+    background: #fff;
+    width: 250px;
+    border-radius: 15px;
+    -webkit-border-radius: 15px;
+    -moz-border-radius: 15px;
+    -ms-border-radius: 15px;
+    -o-border-radius: 15px;
+}
+
+.action .menu::before{
+    content: '';
+    position: absolute;
+    top: -10px;
+    right: 40px;
+    background-color: #fff;
+    width: 40px;
+    height: 40px;
+    transform: rotate(45deg);
+    -webkit-transform: rotate(45deg);
+    -moz-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    -o-transform: rotate(45deg);
+}
+
+.action .menu h3{
+    text-align: center;
+    padding: 15px;
+    font-weight: 700;
+    box-sizing: border-box;
+    width: 100%;
+}
+
+.action .menu ul{
+    width: 100%;
+    list-style: none;
+    padding: 0 30px;
+    box-sizing: border-box;
+}
+
+.action .menu ul li{
+    display: flex;
+    align-items: center;
+    padding: 10px 0;
+}
+
+.action .menu ul li img{
+    width: 30px;
+    margin-left: 10px;
+    opacity: .6;
+}
+
+.action .menu ul li a{
+    text-decoration: none;
+    color: #000;
 }
