--- a/style/style.css
+++ b/style/style.css
@@ -12,74 +12,65 @@
     margin: 0;
 }
 
-body{
+body {
+    height: 100vh;
+    overflow: hidden;
     font-family: 'vazir';
     direction: rtl;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
     background-color: #ffccbc;
 }
 
-.action{
+.action {
     position: fixed;
-    top: 35%;
+    top: 50%;
     right: 50%;
-    transform: translateX(50%);
-    -webkit-transform: translateX(50%);
-    -moz-transform: translateX(50%);
-    -ms-transform: translateX(50%);
-    -o-transform: translateX(50%);
+    transform: translate(50%, -50%);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
-.action .profile{
-    position: relative;
+.action .profile {
     width: 120px;
     height: 120px;
     border-radius: 50%;
-    -webkit-border-radius: 50%;
-    -moz-border-radius: 50%;
-    -ms-border-radius: 50%;
-    -o-border-radius: 50%;
     overflow: hidden;
+    position: relative;
 }
 
-.action .profile img{
-    position: absolute;
+.action .profile img {
     width: 100%;
     height: 100%;
     object-fit: cover;
 }
 
-.action .menu{
-    position: absolute;
-    top: 150px;
-    right: 0%;
+.action .menu {
+    margin-top: 20px;
     background: #fff;
     width: 250px;
     border-radius: 15px;
-    -webkit-border-radius: 15px;
-    -moz-border-radius: 15px;
-    -ms-border-radius: 15px;
-    -o-border-radius: 15px;
+    opacity: 0;
+    transform: translateY(80px);
+    transition: all .4s ease-in-out;
+    position: relative;
 }
 
-.action .menu::before{
+.action .menu.active {
+    opacity: 1;
+    transform: translateY(0);
+}
+
+.action .menu::before {
     content: '';
     position: absolute;
-    top: -10px;
+    top: -20px;
     right: 40px;
-    background-color: #fff;
     width: 40px;
     height: 40px;
+    background-color: #fff;
     transform: rotate(45deg);
-    -webkit-transform: rotate(45deg);
-    -moz-transform: rotate(45deg);
-    -ms-transform: rotate(45deg);
-    -o-transform: rotate(45deg);
 }
+
 
 .action .menu h3{
     text-align: center;
